--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/og": "^0.8.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
